# calibrated

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yml
Swift/: AX.swift  Bindings.swift
assets/: README.md
config/: default.json
crates/calibrated-core/: Cargo.toml
crates/calibrated-core/src/: autoclicker.rs  config.rs  lib.rs  main.rs
crates/calibrated-core/src/app/autoclicker/: clicker.rs  mod.rs  scheduler.rs
crates/calibrated-core/src/app/ui/: content.rs  sidebar.rs
crates/calibrated-core/src/autoclicker/: clicker.rs  scheduler.rs
crates/calibrated-core/src/config/: profiles.rs  settings.rs
crates/calibrated-settings/: Cargo.toml
crates/calibrated-settings/src/: app_settings.rs  lib.rs  profile_manager.rs
crates/calibrated-ui/: Cargo.toml
crates/calibrated-ui/src/: lib.rs
crates/calibrated-ui/src/components/: button.rs  header.rs  input.rs  mod.rs
crates/calibrated-ui/src/panels/: home.rs  macros.rs  mod.rs  settings.rs
crates/swift_bindings/: Bindings.swift  Cargo.toml  build.rs
crates/swift_bindings/src/: lib.rs
src/: main.rs
src/app/: mod.rs
src/app/autoclicker/: clicker.rs
src/app/config/: mod.rs  settings.rs
src/app/ui/: content.rs  mod.rs  sidebar.rs
